--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "firebase": "^5.8.4",
+    "gh-pages": "^2.0.1",
+    "history": "^4.7.2",
     "react": "^16.8.3",
+    "react-app-polyfill": "^0.2.1",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-redux-firebase": "^2.2.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-firestore": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
